--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.firebaseui:firebase-ui-firestore:6.4.0'
-
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
